[package]
name = "papi-bindings"
version = "0.5.1"
authors = ["Eric Holk <eric.holk@gmail.com>", "Andrea Cracco <guilucand@gmail.com>"]
edition = "2018"
categories = []
description = "Rust PAPI bindings"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Guilucand/papi-bindings-rs"

[dependencies]
libc = "0.2.139"
